removed unnecessary integrations in ocms ... minor improvements ...

--- a/msobox/oc/TODO
+++ b/msobox/oc/TODO
@@ -12,7 +12,6 @@ SENSITIVITY ANALYSIS:
 
 calculation of sensitivity domain
 post optimal calculation of multipliers
-avoid inverting KKT-matrix
 automatize deletion of irrelevant controls and parameters in sensitivity analysis
 implement treatment of box constraints into sensitivity analysis
 
@@ -22,11 +21,10 @@ implement treatment of box constraints into sensitivity analysis
 
 OPTIMAL CONTROL:
 
-implement state and time dependent constraints (MS only)
 exploit problem structure
 only declare free boundary values as variables for solver
-implement transformation of free end parameters, t0 and tf
 use fortran backend to differentiate objective function
+parallelization of integration (MS only)
 
 """
 ===============================================================================
@@ -35,7 +33,6 @@ use fortran backend to differentiate objective function
 INTEGRATION:
 
 implement implicit euler
-parallelization of integration (MS only)
 
 """
 ===============================================================================
@@ -52,7 +49,7 @@ doc
 GENERAL:
 
 at least include some asserts
-avoid copying and creation of arrays
+more efficient memory management?
 
 """
 ===============================================================================
