--- a/msobox/oc/TODO
+++ b/msobox/oc/TODO
@@ -21,10 +21,12 @@ implement treatment of box constraints into sensitivity analysis
 
 OPTIMAL CONTROL:
 
+add NQI into ocss and ocms ...
 exploit problem structure
 only declare free boundary values as variables for solver
 use fortran backend to differentiate objective function
 parallelization of integration (MS only)
+add equality constraints to ocss_scipy
 
 """
 ===============================================================================
